=================
Changes for Crate
=================

Unreleased
==========

 - added functionality to index and match geo shapes

 - restrict WITHIN function to only accept geo_point (and compatible types)
   as first argument

 - Added snapshot and restore functionality

 - Changed crate launch scripts to no longer support extending the
   CRATE_CLASSPATH environment variable

 - Updated crate-admin to 0.15.3 which includes following changes:

   - fix: REPLICATED DATA at the overview page showed incorrect percentage of
     of replicated data when number of undereplicated records was higher than
     number of total records

 - Added support for join conditions

 - Updated crash to 0.14.2 which contains following changes:

   - Fixed an assertion error that could occur under python2.7

 - Added initial limited cross-join support

 - Updated crate/elasticsearch for improved logging on graceful shutdown errors

 - Added ``array_cat``, ``array_unique`` and ``array_difference`` scalar 
   functions. Also modified ``concat`` function to resolve to ``array_cat`` when
   ``concat`` function is called with 2 array args, so the operator ``||`` will 
   work with arrays.

2015/11/04 0.52.1
=================

 - Fixed an issue that caused orphaned partitions with an remaining alias to
   not be recognized correctly

 - Fix: clean up file descriptors in case of exceptions when retrieving blobs
   over the REST api

 - Fixed an issue that was causing like queries to fail if using a special regex 
   character

 - Upgraded Elasticsearch to 1.7.3

 - Fixed the issue which causes overloading of the first configured node in
   the cluster when multiple clients connections are established

 - Fixed a possible race condition that could lead to queries getting stuck
   (Only affected SELECT queries with a limit/offset > 500000) 

 - Fix: Crate won't start properly if a plugin loading error occurs
   (e.g. through a misconfigured plugin)
